--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-new file
+<h1>Pawel Osuch</h1>
+<span>Senior Account Manager</span>
+<p>
+    My name is <b>Pawel</b>. I am a proactive achiever, with a marketing background and 6 years of experience in operations and strategic teams in digital marketing in start-up/agency/ad-tech.
+    I have knowledge of traditional and online marketing strategy and tactics; product knowledge across all digital advertising products areas and demonstrated thought leadership within the digital marketing space.
+</p>
