--- a/index.html
+++ b/index.html
@@ -1,21 +1,40 @@
-<img src="avatar.jpeg" width="150px" height="150px"/>
-<h1 style="font-size: 36px">Pawel Osuch</h1>
-<span style="color:grey">Senior Account Manager</span>
-<p>
-    My name is <b>Pawel</b>. I am a proactive achiever, with a marketing background and 6 years of experience in operations and strategic teams in digital marketing in start-up/agency/ad-tech.
-    I have knowledge of traditional and online marketing strategy and tactics; product knowledge across all digital advertising products areas and demonstrated thought leadership within the digital marketing space.
-</p>
-<h2 style="font-size: 28px">Experience</h2>
-<ul>
-    <li>2022 - Present: Google - Senior Account Manager</li>
-    <li>2019 - 2022: RTB House - Account Manager / Senior Account Manager</li>
-    <li>2017 - 2019: Value Media - Digital Junior Strategist</li>
-    <li>2016 - 2017: iProspect - Media Strategy Junior Associate</li>
-</ul>
-<h2 style="font-size: 28px">Education</h2>
-<ul>
-    <li>2020 - 2021: Warsaw School of Economics - <a href="https://www.sgh.waw.pl/studia-podyplomowe-i-mba/zarzadzanie/studia-podyplomowe-transformacja-cyfrowa">Postgraduate in Digital Transformation</a></li>
-    <li>2016 - 2019: Warsaw School of Economics - <a href="https://www.sgh.waw.pl/studia-magisterskie/studia-magisterskie-e-biznes">Master's Degree in E-Business</a></li>
-    <li>2011 - 2014: Cracow University of Economics - <a href="https://studiuj.uek.krakow.pl/listings/kierunek-miedzynarodowe-stosunki-gospodarcze-niestacjonarne-i-stopien/">Bachelor in International Business</a></li> 
-</ul>
-<h2 style="font-size: 28px">Intrerests</h2>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title> Pawel Osuch - CV</title>
+        <style>
+            h1 {
+                font-size: 36px;
+            }
+            h2 {
+                font-size: 28px;
+            }
+            span {
+                color: grey;
+            }
+        </style>
+    </head>
+    <body>
+        <img src="avatar.jpeg" width="150px" height="150px"/>
+        <h1>Pawel Osuch</h1>
+        <span>Senior Account Manager</span>
+        <p>
+            My name is <b>Pawel</b>. I am a proactive achiever, with a marketing background and 6 years of experience in operations and strategic teams in digital marketing in start-up/agency/ad-tech.
+            I have knowledge of traditional and online marketing strategy and tactics; product knowledge across all digital advertising products areas and demonstrated thought leadership within the digital marketing space.
+        </p>
+        <h2>Experience</h2>
+        <ul>
+            <li>2022 - Present: Google - Senior Account Manager</li>
+            <li>2019 - 2022: RTB House - Account Manager / Senior Account Manager</li>
+            <li>2017 - 2019: Value Media - Digital Junior Strategist</li>
+            <li>2016 - 2017: iProspect - Media Strategy Junior Associate</li>
+        </ul>
+        <h2>Education</h2>
+        <ul>
+            <li>2020 - 2021: Warsaw School of Economics - <a href="https://www.sgh.waw.pl/studia-podyplomowe-i-mba/zarzadzanie/studia-podyplomowe-transformacja-cyfrowa">Postgraduate in Digital Transformation</a></li>
+            <li>2016 - 2019: Warsaw School of Economics - <a href="https://www.sgh.waw.pl/studia-magisterskie/studia-magisterskie-e-biznes">Master's Degree in E-Business</a></li>
+            <li>2011 - 2014: Cracow University of Economics - <a href="https://studiuj.uek.krakow.pl/listings/kierunek-miedzynarodowe-stosunki-gospodarcze-niestacjonarne-i-stopien/">Bachelor in International Business</a></li> 
+        </ul>
+        <h2>Intrerests</h2>
+    </body>
+</html>
