further changes index.html and style.css

--- a/index.html
+++ b/index.html
@@ -2,20 +2,10 @@
 <html>
     <head>
         <title> Pawel Osuch - CV</title>
-        <style>
-            h1 {
-                font-size: 36px;
-            }
-            h2 {
-                font-size: 28px;
-            }
-            span {
-                color: grey;
-            }
-        </style>
+        <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
-        <img src="avatar.jpeg" width="150px" height="150px"/>
+        <img src="avatar.jpeg"/>
         <h1>Pawel Osuch</h1>
         <span>Senior Account Manager</span>
         <p>
