--- a/index.html
+++ b/index.html
@@ -5,26 +5,53 @@
         <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
-        <img src="avatar.jpeg"/>
-        <h1>Pawel Osuch</h1>
-        <span>Senior Account Manager</span>
-        <p>
-            My name is <b>Pawel</b>. I am a proactive achiever, with a marketing background and 6 years of experience in operations and strategic teams in digital marketing in start-up/agency/ad-tech.
-            I have knowledge of traditional and online marketing strategy and tactics; product knowledge across all digital advertising products areas and demonstrated thought leadership within the digital marketing space.
-        </p>
-        <h2>Experience</h2>
-        <ul>
-            <li>2022 - Present: Google - Senior Account Manager</li>
-            <li>2019 - 2022: RTB House - Account Manager / Senior Account Manager</li>
-            <li>2017 - 2019: Value Media - Digital Junior Strategist</li>
-            <li>2016 - 2017: iProspect - Media Strategy Junior Associate</li>
-        </ul>
-        <h2>Education</h2>
-        <ul>
-            <li>2020 - 2021: Warsaw School of Economics - <a href="https://www.sgh.waw.pl/studia-podyplomowe-i-mba/zarzadzanie/studia-podyplomowe-transformacja-cyfrowa">Postgraduate in Digital Transformation</a></li>
-            <li>2016 - 2019: Warsaw School of Economics - <a href="https://www.sgh.waw.pl/studia-magisterskie/studia-magisterskie-e-biznes">Master's Degree in E-Business</a></li>
-            <li>2011 - 2014: Cracow University of Economics - <a href="https://studiuj.uek.krakow.pl/listings/kierunek-miedzynarodowe-stosunki-gospodarcze-niestacjonarne-i-stopien/">Bachelor in International Business</a></li> 
-        </ul>
-        <h2>Intrerests</h2>
+        <header>
+            <img src="avatar.jpeg"/>
+            <h1>Pawel Osuch</h1>
+            <span>Senior Account Manager</span>
+        </header>
+        <main>
+            <section>
+                <h2>About me</h2>
+                <p>
+                    My name is <b>Pawel</b>. I am a proactive achiever, with a marketing background and 6 years of experience in operations and strategic teams in digital marketing in start-up/agency/ad-tech.
+                    I have knowledge of traditional and online marketing strategy and tactics; product knowledge across all digital advertising products areas and demonstrated thought leadership within the digital marketing space.
+                </p>
+            </section>
+            <section>
+                <h2>Experience</h2>
+                <ul>
+                    <li>2022 - Present: Google - Senior Account Manager</li>
+                    <li>2019 - 2022: RTB House - Account Manager / Senior Account Manager</li>
+                    <li>2017 - 2019: Value Media - Digital Junior Strategist</li>
+                    <li>2016 - 2017: iProspect - Media Strategy Junior Associate</li>
+                </ul>
+            </section>
+            <section>
+                <h2>Languages</h2>
+                <ul>
+                    <li>Polish: native</li>
+                    <li>English: Professional working proficiency</li>
+                    <li>German: Elementary proficiency</li>
+                </ul>
+            </section>
+            <section>
+                <h2>Education</h2>
+                <ul>
+                    <li>2020 - 2021: Warsaw School of Economics - <a href="https://www.sgh.waw.pl/studia-podyplomowe-i-mba/zarzadzanie/studia-podyplomowe-transformacja-cyfrowa">Postgraduate in Digital Transformation</a></li>
+                    <li>2016 - 2019: Warsaw School of Economics - <a href="https://www.sgh.waw.pl/studia-magisterskie/studia-magisterskie-e-biznes">Master's Degree in E-Business</a></li>
+                    <li>2011 - 2014: Cracow University of Economics - <a href="https://studiuj.uek.krakow.pl/listings/kierunek-miedzynarodowe-stosunki-gospodarcze-niestacjonarne-i-stopien/">Bachelor in International Business</a></li> 
+                </ul>
+            </section>
+            <section>
+                <h2>Intrerests</h2>
+                <ul>
+                    <li>movies</li>
+                    <li>economy</li>
+                    <li>cycling</li>
+                    <li>skiing</li>
+            </ul>
+            </section>
+        </main>
     </body>
 </html>
