added margins, paddings etc

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <section>
                 <h2>About me</h2>
                 <p>
-                    My name is <b>Pawel</b>. I am a proactive achiever, with a marketing background and 6 years of experience in operations and strategic teams in digital marketing in start-up/agency/ad-tech.
+                    My name is <b>Pawel</b>. I am a proactive achiever, with a <a href="https://en.wikipedia.org/wiki/Marketing">marketing</a> background and 6 years of experience in operations and strategic teams in digital marketing in <i>start-up/agency/ad-tech</i>.
                     I have knowledge of traditional and online marketing strategy and tactics; product knowledge across all digital advertising products areas and demonstrated thought leadership within the digital marketing space.
                 </p>
             </section>
