added display flex

--- a/index.html
+++ b/index.html
@@ -7,8 +7,18 @@
     <body>
         <header>
             <img src="avatar.jpeg"/>
-            <h1>Pawel Osuch</h1>
-            <span>Senior Account Manager</span>
+            <div>
+                <h1>Pawel Osuch</h1>
+                <span>Senior Account Manager</span>
+            </div>
+            <address>
+                <ul>
+                    <li>Phone: +48 796 011 235</li>
+                    <li>Email: paosuch@gmail.com</li>
+                    <li>Web: <a href="https://linkedin.com/in/osuch">Linkedin</a></li>
+                    <li>Address: Dublin, Ireland</li>
+                </ul>
+            </address>
         </header>
         <main>
             <section>
