next changes images

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
             </div>
             <address>
                 <ul>
-                    <li>Phone: +48 796 011 235</li>
-                    <li>Email: paosuch@gmail.com</li>
-                    <li>Web: <a href="https://linkedin.com/in/osuch">Linkedin</a></li>
-                    <li>Address: Dublin, Ireland</li>
+                    <li><b>Phone:</b> +48 796 011 235</li>
+                    <li><b>Email:</b> paosuch@gmail.com</li>
+                    <li><b>Web: <a href="https://linkedin.com/in/osuch"></b>Linkedin</a></li>
+                    <li><b>Address:</b> Dublin, Ireland</li>
                 </ul>
             </address>
         </header>
