--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
             </div>
             <address>
                 <ul>
-                    <li><b>Phone:</b> +48 796 011 235</li>
-                    <li><b>Email:</b> paosuch@gmail.com</li>
-                    <li><b>Web: <a href="https://linkedin.com/in/osuch"></b>Linkedin</a></li>
-                    <li><b>Address:</b> Dublin, Ireland</li>
+                    <li><img src="images/phone.png"/><b>Phone:</b> +48 796 011 235</li>
+                    <li><img src="images/mail.png"/><b>Email:</b> paosuch@gmail.com</li>
+                    <li><img src="images/pin.png"/> <a href="https://linkedin.com/in/osuch"></b>linkedin.com/in/osuch</a></li>
                 </ul>
             </address>
         </header>
