added class in css

--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     </head>
     <body>
         <header>
-            <img src="avatar.jpeg"/>
+            <img class="circle" src="avatar.jpeg"/>
             <div>
                 <h1>Pawel Osuch</h1>
                 <span>Senior Account Manager</span>
             </div>
             <address>
                 <ul>
-                    <li><img src="images/phone.png"/><b>Phone:</b> +48 796 011 235</li>
-                    <li><img src="images/mail.png"/><b>Email:</b> paosuch@gmail.com</li>
-                    <li><img src="images/pin.png"/> <a href="https://linkedin.com/in/osuch"></b>linkedin.com/in/osuch</a></li>
+                    <li><img class="address-icon circle" src="images/phone.png"/><b>Phone:</b> +48 796 011 235</li>
+                    <li><img class="address-icon circle" src="images/mail.png"/><b>Email:</b> paosuch@gmail.com</li>
+                    <li><img class="address-icon circle" src="images/pin.png"/> <a href="https://linkedin.com/in/osuch"></b>linkedin.com/in/osuch</a></li>
                 </ul>
             </address>
         </header>
