--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
             <div>
                 <h1>Pawel Osuch</h1>
                 <span>Senior Account Manager</span>
+                <div>
+                    <a class="cv-download-link" href="https://store3.gofile.io/download/9ddc4ba0-ba03-4e1c-bb10-5b6c435d0a13/CV%20Pawel%20Osuch%209.2022.pdf">Download CV</a>
+                </div>    
             </div>
             <address>
                 <ul>
-                    <li><img class="address-icon circle" src="images/phone.png"/><b>Phone:</b> +48 796 011 235</li>
-                    <li><img class="address-icon circle" src="images/mail.png"/><b>Email:</b> paosuch@gmail.com</li>
-                    <li><img class="address-icon circle" src="images/pin.png"/> <a href="https://linkedin.com/in/osuch"></b>linkedin.com/in/osuch</a></li>
+                    <li><img class="address-icon circle" src="images/phone.png"/><b>Phone:</b> <a href="tel:+48796011235">+48 796 011 235</a></li>
+                    <li><img class="address-icon circle" src="images/mail.png"/><b>Email:</b> <a href="mailto:paosuch@gmail.com">paosuch@gmail.com</a></li>
+                    <li><img class="address-icon circle" src="images/pin.png"/><b>Web:</b> <a href="https://linkedin.com/in/osuch"></b>linkedin.com/in/osuch</a></li>
                 </ul>
             </address>
         </header>
@@ -30,10 +33,10 @@
             <section>
                 <h2>Experience</h2>
                 <ul>
-                    <li>2022 - Present: Google - Senior Account Manager</li>
-                    <li>2019 - 2022: RTB House - Account Manager / Senior Account Manager</li>
-                    <li>2017 - 2019: Value Media - Digital Junior Strategist</li>
-                    <li>2016 - 2017: iProspect - Media Strategy Junior Associate</li>
+                    <li>2022 - Present: <a href="https://www.google.com/">Google</a> - Senior Account Manager</li>
+                    <li>2019 - 2022: <a href="https://www.rtbhouse.com/">RTB House</a> - Account Manager / Senior Account Manager</li>
+                    <li>2017 - 2019: <a href="https://valuemedia.pl/">Value Media</a> - Digital Junior Strategist</li>
+                    <li>2016 - 2017: <a href="https://www.iprospect.com/en/pl/">iProspect</a> - Media Strategy Junior Associate</li>
                 </ul>
             </section>
             <section>
