--- a/index.html
+++ b/index.html
@@ -5,93 +5,95 @@
         <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
-        <header>
-            <img class="profile-picture circle" src="avatar.jpeg"/>
-            <div>
-                <h1>Pawel Osuch</h1>
-                <span>Senior Account Manager</span>
+        <div class="container">
+            <header>
+                <img class="profile-picture circle" src="avatar.jpeg"/>
                 <div>
-                    <a class="cv-download-link" href="https://store3.gofile.io/download/9ddc4ba0-ba03-4e1c-bb10-5b6c435d0a13/CV%20Pawel%20Osuch%209.2022.pdf">Download CV</a>
-                </div>    
-            </div>
-            <address>
-                <ul>
-                    <li><img class="address-icon circle" src="images/phone.png"/><b>Phone:</b> <a href="tel:+48796011235">+48 796 011 235</a></li>
-                    <li><img class="address-icon circle" src="images/mail.png"/><b>Email:</b> <a href="mailto:paosuch@gmail.com">paosuch@gmail.com</a></li>
-                    <li><img class="address-icon circle" src="images/pin.png"/><b>Web:</b> <a href="https://linkedin.com/in/osuch"></b>linkedin.com/in/osuch</a></li>
-                </ul>
-            </address>
-        </header>
-        <main>
-            <section>
-                <h2>About me</h2>
-                <p>
-                    My name is <b>Pawel</b>. I am a proactive achiever, with a <a href="https://en.wikipedia.org/wiki/Marketing">marketing</a> background and 6 years of experience in operations and strategic teams in digital marketing in <i>start-up/agency/ad-tech</i>.
-                    I have knowledge of traditional and online marketing strategy and tactics; product knowledge across all digital advertising products areas and demonstrated thought leadership within the digital marketing space.
-                </p>
-            </section>
-            <section>
-                <h2>Experience</h2>
-                <ul>
-                    <li>2022 - Present: <a href="https://www.google.com/">Google</a> - Senior Account Manager</li>
-                    <li>2019 - 2022: <a href="https://www.rtbhouse.com/">RTB House</a> - Account Manager / Senior Account Manager</li>
-                    <li>2017 - 2019: <a href="https://valuemedia.pl/">Value Media</a> - Digital Junior Strategist</li>
-                    <li>2016 - 2017: <a href="https://www.iprospect.com/en/pl/">iProspect</a> - Media Strategy Junior Associate</li>
-                </ul>
-            </section>
-            <section>
-                <h2>Languages</h2>
-                <ul>
-                    <li>Polish: native</li>
-                    <li>English: Professional working proficiency</li>
-                    <li>German: Elementary proficiency</li>
-                </ul>
-            </section>
-            <section>
-                <h2>Education</h2>
-                <ul>
-                    <li>2020 - 2021: Warsaw School of Economics - <a href="https://www.sgh.waw.pl/studia-podyplomowe-i-mba/zarzadzanie/studia-podyplomowe-transformacja-cyfrowa">Postgraduate in Digital Transformation</a></li>
-                    <li>2016 - 2019: Warsaw School of Economics - <a href="https://www.sgh.waw.pl/studia-magisterskie/studia-magisterskie-e-biznes">Master's Degree in E-Business</a></li>
-                    <li>2011 - 2014: Cracow University of Economics - <a href="https://studiuj.uek.krakow.pl/listings/kierunek-miedzynarodowe-stosunki-gospodarcze-niestacjonarne-i-stopien/">Bachelor in International Business</a></li> 
-                </ul>
-            </section>
-            <section>
-                <h2>Intrerests</h2>
-                <ul class="hobbies">
-                    <li><img src="images/movies.png"/>
-                        <div>
-                            <h3>movies</h3>
-                            <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                            </p>
-                        </div>
-                    </li>
-                    <li><img src="images/economy.png"/>
-                        <div>
-                            <h3>economy</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.    
-                            </p>
-                        </div>
-                    </li>
-                    <li><img src="images/cycling.png"/>
-                        <div>
-                            <h3>cycling</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.  
-                            </p>
-                        </div>
-                    </li>
-                    <li><img src="images/skiing.png"/>
-                        <div>
-                            <h3>skiing</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.    
-                            </p>
-                        </div>
-                    </li>
-                </ul>
-            </section>
-        </main>
+                    <h1>Pawel Osuch</h1>
+                    <span>Senior Account Manager</span>
+                    <div>
+                        <a class="cv-download-link" href="https://store3.gofile.io/download/9ddc4ba0-ba03-4e1c-bb10-5b6c435d0a13/CV%20Pawel%20Osuch%209.2022.pdf">Download CV</a>
+                    </div>    
+                </div>
+                <address>
+                    <ul>
+                        <li><img class="address-icon circle" src="images/phone.png"/><b>Phone:</b> <a href="tel:+48796011235">+48 796 011 235</a></li>
+                        <li><img class="address-icon circle" src="images/mail.png"/><b>Email:</b> <a href="mailto:paosuch@gmail.com">paosuch@gmail.com</a></li>
+                        <li><img class="address-icon circle" src="images/pin.png"/><b>Web:</b> <a href="https://linkedin.com/in/osuch"></b>linkedin.com/in/osuch</a></li>
+                    </ul>
+                </address>
+            </header>
+            <main>
+                <section>
+                    <h2>About me</h2>
+                    <p>
+                        My name is <b>Pawel</b>. I am a proactive achiever, with a <a href="https://en.wikipedia.org/wiki/Marketing">marketing</a> background and 6 years of experience in operations and strategic teams in digital marketing in <i>start-up/agency/ad-tech</i>.
+                        I have knowledge of traditional and online marketing strategy and tactics; product knowledge across all digital advertising products areas and demonstrated thought leadership within the digital marketing space.
+                    </p>
+                </section>
+                <section>
+                    <h2>Experience</h2>
+                    <ul>
+                        <li>2022 - Present: <a href="https://www.google.com/">Google</a> - Senior Account Manager</li>
+                        <li>2019 - 2022: <a href="https://www.rtbhouse.com/">RTB House</a> - Account Manager / Senior Account Manager</li>
+                        <li>2017 - 2019: <a href="https://valuemedia.pl/">Value Media</a> - Digital Junior Strategist</li>
+                        <li>2016 - 2017: <a href="https://www.iprospect.com/en/pl/">iProspect</a> - Media Strategy Junior Associate</li>
+                    </ul>
+                </section>
+                <section>
+                    <h2>Languages</h2>
+                    <ul>
+                        <li>Polish: native</li>
+                        <li>English: Professional working proficiency</li>
+                        <li>German: Elementary proficiency</li>
+                    </ul>
+                </section>
+                <section>
+                    <h2>Education</h2>
+                    <ul>
+                        <li>2020 - 2021: Warsaw School of Economics - <a href="https://www.sgh.waw.pl/studia-podyplomowe-i-mba/zarzadzanie/studia-podyplomowe-transformacja-cyfrowa">Postgraduate in Digital Transformation</a></li>
+                        <li>2016 - 2019: Warsaw School of Economics - <a href="https://www.sgh.waw.pl/studia-magisterskie/studia-magisterskie-e-biznes">Master's Degree in E-Business</a></li>
+                        <li>2011 - 2014: Cracow University of Economics - <a href="https://studiuj.uek.krakow.pl/listings/kierunek-miedzynarodowe-stosunki-gospodarcze-niestacjonarne-i-stopien/">Bachelor in International Business</a></li> 
+                    </ul>
+                </section>
+                <section>
+                    <h2>Intrerests</h2>
+                    <ul class="hobbies">
+                        <li><img src="images/movies.png"/>
+                            <div>
+                                <h3>movies</h3>
+                                <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                </p>
+                            </div>
+                        </li>
+                        <li><img src="images/economy.png"/>
+                            <div>
+                                <h3>economy</h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.    
+                                </p>
+                            </div>
+                        </li>
+                        <li><img src="images/cycling.png"/>
+                            <div>
+                                <h3>cycling</h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.  
+                                </p>
+                            </div>
+                        </li>
+                        <li><img src="images/skiing.png"/>
+                            <div>
+                                <h3>skiing</h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.    
+                                </p>
+                            </div>
+                        </li>
+                    </ul>
+                </section>
+            </main>
+        </div>
     </body>
 </html>
