adjusted according to validator.w3.org

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <div class="container">
             <header>
-                <img class="profile-picture circle" src="avatar.jpeg"/>
+                <img class="profile-picture circle" src="avatar.jpeg" alt="Avatar Pawel Osuch"/>
                 <div>
                     <h1>Pawel Osuch</h1>
                     <span>Senior Account Manager</span>
@@ -17,9 +17,9 @@
                 </div>
                 <address>
                     <ul>
-                        <li><img class="address-icon circle" src="images/phone.png"/><b>Phone:</b> <a href="tel:+48796011235">+48 796 011 235</a></li>
-                        <li><img class="address-icon circle" src="images/mail.png"/><b>Email:</b> <a href="mailto:paosuch@gmail.com">paosuch@gmail.com</a></li>
-                        <li><img class="address-icon circle" src="images/pin.png"/><b>Web:</b> <a href="https://linkedin.com/in/osuch"></b>linkedin.com/in/osuch</a></li>
+                        <li><img class="address-icon circle" src="images/phone.png" alt=""/><b>Phone:</b> <a href="tel:+48796011235">+48 796 011 235</a></li>
+                        <li><img class="address-icon circle" src="images/mail.png" alt=""/><b>Email:</b> <a href="mailto:paosuch@gmail.com">paosuch@gmail.com</a></li>
+                        <li><img class="address-icon circle" src="images/pin.png" alt=""/><b>Web:</b> <a href="https://linkedin.com/in/osuch"></b>linkedin.com/in/osuch</a></li>
                     </ul>
                 </address>
             </header>
@@ -59,7 +59,7 @@
                 <section>
                     <h2>Intrerests</h2>
                     <ul class="hobbies">
-                        <li><img src="images/movies.png"/>
+                        <li><img src="images/movies.png" alt=""/>
                             <div>
                                 <h3>movies</h3>
                                 <p>
@@ -67,7 +67,7 @@
                                 </p>
                             </div>
                         </li>
-                        <li><img src="images/economy.png"/>
+                        <li><img src="images/economy.png" alt=""/>
                             <div>
                                 <h3>economy</h3>
                                 <p>
@@ -75,7 +75,7 @@
                                 </p>
                             </div>
                         </li>
-                        <li><img src="images/cycling.png"/>
+                        <li><img src="images/cycling.png" alt=""/>
                             <div>
                                 <h3>cycling</h3>
                                 <p>
@@ -83,7 +83,7 @@
                                 </p>
                             </div>
                         </li>
-                        <li><img src="images/skiing.png"/>
+                        <li><img src="images/skiing.png" alt=""/>
                             <div>
                                 <h3>skiing</h3>
                                 <p>
